# marl-cop-thief

./: .env-example  .gitignore  README.md  bonus_game.py  main.py  pyproject.toml  visualize.py
config/: config.json  rate_limits.json
docs/: PLAN.md  PRD.md  PRD_game_engine.md  PRD_gmail_report.md  PRD_mcp_server.md  PRD_q_table.md  PROMPTS.md  TODO.md
results/: bonus_game_results.json  game_results.json
src/: main.py
src/cop_thief/: __init__.py  constants.py
src/cop_thief/sdk/: sdk.py
src/cop_thief/services/: agent_client.py  cop_server.py  game_engine.py  grid.py  reporter.py  strategy.py  thief_server.py
src/cop_thief/shared/: config.py  gatekeeper.py  version.py
tests/unit/: test_agent_client.py  test_config.py  test_game_engine.py  test_gatekeeper.py  test_grid.py  test_reporter.py  test_sdk.py  test_strategy.py
