[project]
name = "marl-cop-thief"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.112.0",
    "fastmcp>=3.4.2",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.19",
]
