[project]
name = "marl-cop-thief"
version = "0.1.0"
description = "MARL Cop & Thief via MCP Servers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.112.0",
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "matplotlib>=3.10.9",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.19",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/main.py",
    "*/tests/*",
    "src/cop_thief/services/cop_server.py",
    "src/cop_thief/services/thief_server.py",
    "src/cop_thief/services/reporter.py",
]

[tool.coverage.report]
fail_under = 85

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
